--- a/app/src/main/res/layout/activity_introductory.xml
+++ b/app/src/main/res/layout/activity_introductory.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="900dp"
         android:elevation="2dp"
-        android:src="@drawable/bg"
+        android:src="@drawable/bg4"
         app:layout_constraintVertical_bias="0"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
@@ -28,10 +28,10 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/fredoka_one"
+        android:elevation="20dp"
         android:gravity="center"
-        android:elevation="2dp"
         android:text="SAFE WALLET"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,6 +46,7 @@
         android:elevation="2dp"
         android:layout_width="wrap_content"
         android:layout_height="200dp"
+        android:layout_marginTop="90dp"
         app:layout_constraintVertical_bias="0.3"
         app:lottie_rawRes="@raw/lock"
         app:layout_constraintEnd_toEndOf="parent"
@@ -58,7 +59,8 @@
         android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:ignore="MissingClass" />
+        tools:ignore="MissingClass"
+         />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
