--- a/app/src/main/res/layout/login_tab_fragment.xml
+++ b/app/src/main/res/layout/login_tab_fragment.xml
@@ -11,7 +11,14 @@
         app:layout_constraintWidth_percent=".8"
         app:layout_constraintVertical_bias=".3"
         app:layout_constraintHorizontal_bias=".5"
-        android:hint="Email"
+        android:hint="Enter Email"
+        android:drawableLeft="@drawable/email"
+        android:paddingStart="10dp"
+        android:textColorHint="#757575"
+        android:padding="8dp"
+        android:autoSizeTextType="uniform"
+        android:gravity="center_horizontal"
+        android:textAlignment="center"
         android:background="@drawable/edit_text_bg"
         android:paddingLeft="20dp"
         android:paddingTop="10dp"
@@ -25,10 +32,17 @@
         android:id="@+id/pass"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Password"
+        android:hint="Enter Password"
         android:paddingLeft="20dp"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
+        android:drawableLeft="@drawable/ic_baseline_lock_24"
+        android:paddingStart="10dp"
+        android:textColorHint="#757575"
+        android:padding="8dp"
+        android:autoSizeTextType="uniform"
+        android:gravity="center_horizontal"
+        android:textAlignment="center"
         android:background="@drawable/edit_text_bg"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -51,6 +65,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:textColor="@color/white"
+        app:backgroundTint="@null"
         android:background="@drawable/button_bg"
         app:layout_constraintVertical_bias="0.7"
         app:layout_constraintWidth_percent=".8" />
@@ -60,7 +75,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Forgot Password"
-        app:layout_constraintVertical_bias="0"
+        app:layout_constraintVertical_bias="0.05"
         app:layout_constraintHorizontal_bias="1"
         android:layout_marginTop="5dp"
         android:layout_marginRight="5dp"
@@ -68,6 +83,19 @@
         app:layout_constraintEnd_toEndOf="@id/pass"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/pass"/>
+
+    <ProgressBar
+        android:id="@+id/progressbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:layout_centerInParent="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
 
 
 
