--- a/app/src/main/res/layout/activity_introductory.xml
+++ b/app/src/main/res/layout/activity_introductory.xml
@@ -43,12 +43,13 @@
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/lottie"
         app:lottie_autoPlay="true"
-        android:elevation="2dp"
-        android:layout_width="wrap_content"
-        android:layout_height="200dp"
+        android:elevation="5dp"
+        android:layout_marginRight="35dp"
+        android:layout_width="400dp"
+        android:layout_height="400dp"
         android:layout_marginTop="90dp"
         app:layout_constraintVertical_bias="0.3"
-        app:lottie_rawRes="@raw/lock"
+        app:lottie_rawRes="@raw/solution"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
