--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:scaleType="centerCrop"
         android:src="@drawable/bg"
@@ -37,6 +37,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/vi_bg"
+
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHeight_percent=".7"
@@ -79,7 +80,7 @@
         android:layout_height="wrap_content"
         android:text="welcome to safe wallet"
         android:textColor="@color/white"
-        android:textSize="16sp"
+        android:textSize="22dp"
         android:textStyle="bold"
         app:layout_constraintVertical_bias=".2"
         app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
