splash screen done

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,5 +17,8 @@
     <color name="pink">#f469a9</color>
     <color name="blue">#88bef5</color>
 
+    <color name="errorColor">#ffffff</color>
+
+
 
 </resources>
