--- a/app/src/main/res/layout/activity_introductory.xml
+++ b/app/src/main/res/layout/activity_introductory.xml
@@ -6,54 +6,54 @@
     android:layout_height="match_parent"
     android:layout_gravity="center"
     android:foregroundGravity="center"
+    android:background="#61656b"
     tools:context=".introductoryActivity">
-
-    <ImageView
-        android:id="@+id/img"
-        android:layout_width="wrap_content"
-        android:layout_height="900dp"
-        android:elevation="2dp"
-        android:src="@drawable/bg4"
-        app:layout_constraintVertical_bias="0"
-        android:scaleType="centerCrop"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteY="-36dp" />
 
 
     <TextView
         android:id="@+id/appname"
-        android:layout_width="300dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/fredoka_one"
-        android:elevation="20dp"
-        android:gravity="center"
+        android:fontFamily="@font/bubblegum_sans"
         android:text="SAFE WALLET"
-        android:textColor="@color/white"
-        android:textSize="30dp"
+        android:textColor="#ffffff"
+        android:textSize="35dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/img"
-        app:layout_constraintVertical_bias="0.312" />
+        app:layout_constraintTop_toBottomOf="@id/lottie" />
+
+    <TextView
+        android:id="@+id/developer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Aadesh Info.Co.Pvt.Ltd"
+        android:textColor="@android:color/darker_gray"
+        android:textSize="20sp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintVertical_bias=".8"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/lottie"/>
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/lottie"
         app:lottie_autoPlay="true"
         android:elevation="5dp"
-        android:layout_marginRight="35dp"
+        android:layout_margin="10dp"
         android:layout_width="400dp"
         android:layout_height="400dp"
         android:layout_marginTop="90dp"
-        app:layout_constraintVertical_bias="0.3"
-        app:lottie_rawRes="@raw/solution"
+        app:layout_constraintVertical_bias=".5"
+        app:lottie_rawRes="@raw/cycle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/appname"
+        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingClass" />
 
     <com.cuberto.liquid_swipe.LiquidPager
