--- a/app/src/main/res/layout/activity_upload_images.xml
+++ b/app/src/main/res/layout/activity_upload_images.xml
@@ -6,20 +6,26 @@
     android:layout_height="wrap_content">
     <include layout="@layout/actionbar"/>
 
+
 <RelativeLayout
     android:layout_gravity="center"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="16dp"
-    android:layout_marginTop="90dp"
+    android:layout_marginTop="60dp"
     android:layout_marginLeft="20dp"
     android:layout_marginRight="20dp"
     android:layout_marginBottom="20dp"
-
     android:gravity="center"
     android:background="@drawable/single_image_bg"
     tools:context=".UploadImages">
-
+    <ScrollView
+        android:layout_width="match_parent"
+        android:scrollbars="none"
+        android:layout_height="wrap_content">
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
 
     <ImageView
         android:layout_width="match_parent"
@@ -45,8 +51,10 @@
         android:id="@+id/inputImageName"
         android:textColor="@color/white"
         android:layout_below="@+id/imageViewAdd"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"/>
+        android:layout_marginLeft="30dp"
+        android:paddingRight="10dp"
+
+        android:layout_marginRight="30dp"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -86,8 +94,9 @@
         android:layout_marginLeft="40dp"
         android:layout_marginRight="40dp"/>
 
+        </RelativeLayout>
 
-
-
+    </ScrollView>
 </RelativeLayout>
+
 </RelativeLayout>
