--- a/app/src/main/res/layout/activity_view.xml
+++ b/app/src/main/res/layout/activity_view.xml
@@ -5,13 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <include layout="@layout/actionbar"/>
-
+<ScrollView
+    android:layout_width="match_parent"
+    android:scrollbars="none"
+    android:layout_height="match_parent">
 <RelativeLayout
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/single_image_bg"
-    android:layout_marginTop="90dp"
+    android:layout_marginTop="50dp"
     android:layout_marginLeft="20dp"
     android:layout_marginRight="20dp"
     android:layout_marginBottom="20dp"
@@ -62,5 +65,7 @@
         android:layout_marginBottom="15dp"
         />
 
+
 </RelativeLayout>
+</ScrollView>
 </RelativeLayout>
