--- a/app/src/main/res/layout/login_tab_fragment.xml
+++ b/app/src/main/res/layout/login_tab_fragment.xml
@@ -8,6 +8,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:scrollbars="none"
         >
 
         <androidx.cardview.widget.CardView
@@ -77,6 +78,7 @@
                     android:paddingLeft="20dp"
                     android:paddingTop="10dp"
                     android:paddingBottom="10dp"
+                    android:inputType="textEmailAddress"
                     android:layout_marginBottom="20dp"
                     android:layout_marginTop="30dp"
                     android:layout_marginLeft="10dp"
@@ -95,6 +97,7 @@
                     android:paddingStart="10dp"
                     android:textColorHint="#757575"
                     android:padding="8dp"
+                    android:inputType="textPassword"
                     android:autoSizeTextType="uniform"
                     android:gravity="center_horizontal"
                     android:textAlignment="center"
@@ -102,6 +105,9 @@
                     android:layout_marginBottom="20dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
+                    android:drawableRight="@drawable/eye"
+                    android:paddingRight="10dp"
+
                     />
 
                 <TextView
