--- a/app/src/main/res/layout/signup_tab_fragment.xml
+++ b/app/src/main/res/layout/signup_tab_fragment.xml
@@ -8,6 +8,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:scrollbars="none"
         >
 
         <androidx.cardview.widget.CardView
@@ -65,6 +66,7 @@
                     app:layout_constraintVertical_bias=".3"
                     app:layout_constraintHorizontal_bias=".5"
                     android:hint="Enter email"
+                    android:inputType="textEmailAddress"
                     android:drawableLeft="@drawable/email"
                     android:paddingStart="10dp"
                     android:textColorHint="#757575"
@@ -87,6 +89,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Enter username"
+                    android:inputType="text"
                     android:paddingLeft="20dp"
                     android:paddingTop="10dp"
                     android:paddingBottom="10dp"
@@ -108,6 +111,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Enter mobile number"
+                    android:inputType="number"
                     android:paddingLeft="20dp"
                     android:paddingTop="10dp"
                     android:paddingBottom="10dp"
@@ -132,6 +136,7 @@
                     android:paddingLeft="20dp"
                     android:paddingTop="10dp"
                     android:paddingBottom="10dp"
+                    android:inputType="textPassword"
                     android:drawableLeft="@drawable/ic_baseline_lock_24"
                     android:paddingStart="10dp"
                     android:textColorHint="#757575"
