all done except logo

--- a/app/src/main/res/layout/fragment_on_boarding2.xml
+++ b/app/src/main/res/layout/fragment_on_boarding2.xml
@@ -7,9 +7,9 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:src="@drawable/img2"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:src="@drawable/onboarding2"
         app:layout_constraintHorizontal_bias=".3"
         app:layout_constraintVertical_bias=".3"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -21,11 +21,10 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sizzling Bites"
+        android:text="SAFE WALLET"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="bold"
-        
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintBottom_toTopOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
@@ -51,7 +50,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-light"
-        android:text="Fresh"
+        android:text="FIND"
         android:textSize="42sp"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintVertical_bias="0"
@@ -66,7 +65,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-condensed"
         android:textSize="56sp"
-        android:text="Everything"
+        android:text="YOURSELF"
         android:textColor="@color/black"
         app:layout_constraintVertical_bias="0"
         app:layout_constraintHorizontal_bias="0"
@@ -79,7 +78,7 @@
         android:id="@+id/textView4"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:text="Everything you will experience will be absolutely fresh"
+        android:text="Explore, reach out to our doors to guard youself ! "
         android:textSize="16sp"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintVertical_bias="0"
