--- a/app/src/main/res/layout/fragment_on_boarding3.xml
+++ b/app/src/main/res/layout/fragment_on_boarding3.xml
@@ -9,7 +9,7 @@
         android:id="@+id/imageView"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:src="@drawable/img3"
+        android:src="@drawable/onboard3"
         app:layout_constraintHorizontal_bias=".3"
         app:layout_constraintVertical_bias=".3"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -21,7 +21,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sizzling Bites"
+        android:text="SAFE WALLET"
         android:textColor="@color/white"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -38,7 +38,8 @@
         android:layout_height="wrap_content"
         android:layout_marginRight="30dp"
         android:text="Skip"
-        android:textColor="@color/black"
+
+        android:textColor="@color/white"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/textView"
@@ -52,7 +53,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-light"
-        android:text="Fresh"
+        android:textColor="@color/white"
+        android:text="USER"
         android:textSize="42sp"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintVertical_bias="0"
@@ -67,7 +69,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-condensed"
         android:textSize="56sp"
-        android:text="Everything"
+        android:text="FRIENDLY"
         android:textColor="@color/white"
         app:layout_constraintVertical_bias="0"
         app:layout_constraintHorizontal_bias="0"
@@ -80,11 +82,12 @@
         android:id="@+id/textView4"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:text="Everything you will experience will be absolutely fresh"
+        android:text="Safe Wallet allows to store, search and delete your assets !"
         android:textSize="16sp"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintVertical_bias="0"
         android:layout_marginTop="5dp"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent=".1"
