--- a/app/src/main/res/layout/fragment_on_boarding1.xml
+++ b/app/src/main/res/layout/fragment_on_boarding1.xml
@@ -11,7 +11,7 @@
         android:id="@+id/imageView"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:src="@drawable/img1"
+        android:src="@drawable/onboard1"
         app:layout_constraintHorizontal_bias=".3"
         app:layout_constraintVertical_bias=".3"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -23,7 +23,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sizzling Bites"
+        android:text="SAFE WALLET"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -52,7 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-light"
-        android:text="Fresh"
+        android:text="STORE"
         android:textSize="42sp"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintVertical_bias="0"
@@ -67,7 +67,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-condensed"
         android:textSize="56sp"
-        android:text="Everything"
+        android:text="SECURELY"
         android:textColor="@color/black"
         app:layout_constraintVertical_bias="0"
         app:layout_constraintHorizontal_bias="0"
@@ -80,7 +80,7 @@
         android:id="@+id/textView4"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:text="Everything you will experience will be absolutely fresh"
+        android:text="Are you Secured ? Dont Worry, So We Are!"
         android:textSize="16sp"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintVertical_bias="0"
