--- a/app/src/main/res/drawable/single_image_bg.xml
+++ b/app/src/main/res/drawable/single_image_bg.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@color/white">
 
     <solid android:color="#757575"/>
     <corners android:radius="30dp"/>
