--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center"
+
     android:orientation="vertical"
+    android:background="@color/white"
     tools:context=".ForgotPassword">
     <include layout="@layout/actionbar"/>
 
@@ -13,7 +14,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center"
+
         android:scrollbars="none"
         >
 
@@ -22,18 +23,14 @@
             android:background="@drawable/vi_bg"
             android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
            android:layout_gravity="center"
+            android:foregroundGravity="center"
             android:elevation="8dp"
-
             android:paddingStart="32dp"
             app:cardCornerRadius="8dp"
             app:cardUseCompatPadding="true"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             android:paddingBottom="10dp"
 
             >
@@ -41,8 +38,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:paddingBottom="50dp"
-                android:layout_marginBottom="30dp"
+                android:layout_gravity="center"
                 android:orientation="vertical">
 
 
@@ -52,6 +48,7 @@
                     android:background="@drawable/form_bg"
                     android:paddingBottom="20dp"
                     android:layout_gravity="center"
+                    android:gravity="center"
                     android:orientation="vertical">
 
                     <ImageView
