--- a/app/src/main/res/layout/login_tab_fragment.xml
+++ b/app/src/main/res/layout/login_tab_fragment.xml
@@ -4,11 +4,13 @@
     android:layout_height="match_parent"
     android:background="@drawable/vi_bg"
     android:layout_marginTop="20dp"
+    android:layout_marginBottom="50dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="none"
+
         >
 
         <androidx.cardview.widget.CardView
@@ -18,9 +20,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="80dp"
             android:layout_marginRight="10dp"
-
             android:elevation="8dp"
-
             android:paddingStart="32dp"
             app:cardCornerRadius="8dp"
             app:cardUseCompatPadding="true"
@@ -28,7 +28,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:paddingBottom="10dp"
+            android:layout_marginBottom="20dp"
 
             >
 
@@ -71,6 +71,7 @@
                     android:paddingStart="10dp"
                     android:textColorHint="#757575"
                     android:padding="8dp"
+                    android:textColor="@color/black"
                     android:autoSizeTextType="uniform"
                     android:gravity="center_horizontal"
                     android:textAlignment="center"
@@ -92,6 +93,7 @@
                     android:hint="Enter password"
                     android:paddingLeft="20dp"
                     android:paddingTop="10dp"
+                    android:textColor="@color/black"
                     android:paddingBottom="10dp"
                     android:drawableLeft="@drawable/ic_baseline_lock_24"
                     android:paddingStart="10dp"
@@ -115,6 +117,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Forgot Password ?"
+                    android:textColor="@color/black"
                     app:layout_constraintVertical_bias="0.05"
                     app:layout_constraintHorizontal_bias="1"
                     android:layout_marginTop="5dp"
